# mlx-benchmark-dashboard

./: .gitignore  README.md  flutter_rust_bridge.yaml
app/: pubspec.yaml
app/lib/: app_shell.dart  main.dart  metric_help.dart  task_labels.dart
app/lib/screens/: bench_screen.dart  chat_screen.dart  compare_screen.dart  dashboard_screen.dart  model_detail_screen.dart  model_manage_screen.dart  onboarding_screen.dart  settings_screen.dart
app/lib/services/: aidash_api.dart  config_service.dart  frb_aidash_api.dart
app/lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/theme/: app_theme.dart
app/lib/utils/: formatters.dart  wav_duration.dart
app/lib/widgets/: doctor_badge.dart  draft_badge.dart  error_card.dart  eval_template_widgets.dart  metric_label.dart  tier_badge.dart
app/macos/: build_rust.sh
app/macos/Runner/: bridge_generated.h
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: formatters_test.dart  widget_test.dart
core/: Cargo.toml  rust_out
core/aidash-cli/: Cargo.toml
core/aidash-cli/src/: main.rs
core/aidash-core/: Cargo.toml
core/aidash-core/src/: api.rs  auth.rs  bench.rs  bootstrap.rs  chat.rs  client.rs  db.rs  env_detect.rs  eval.rs  eval_templates.rs  events.rs  export.rs  hf_cache.rs  lib.rs  lifecycle.rs  monitor.rs  profile.rs  pyproc.rs  stats.rs  sys_memory.rs  tools.rs  tps_tier.rs  watchdog.rs
core/aidash-core/tests/: bench_integration.rs  db_integration.rs  lifecycle_integration.rs  pyproc_log.rs
core/aidash-frb/: Cargo.toml
core/aidash-frb/src/: api.rs  frb_generated.rs  lib.rs  state.rs
docs/: decisions.md  guardian-requirements.md  guardian-violations.md  license-report.md  service-design-decisions.md  tech-stack.md  technical-spec.md
eval_sets/: README.md  context_templates_ko.json  llm_basic_ko.json
python/: pyproject.toml
python/adapters/: chat_graph.py  serve_llama_cpp.py  serve_mflux.py  serve_mlx_audio.py  serve_mlx_lm.py  serve_mlx_vlm.py  serve_mlx_whisper.py  serve_transformers.py  serve_vllm_mlx.py
python/tests/: test_adapter_args.py  test_chat_graph.py  test_snapshot_weights.py
python/tools/: hf_cache.py
scripts/: package_dmg.sh
tests/fixtures/: adapter_multiturn_regression.py  fake_server.py
