[project]
name = "aidash-adapters"
version = "0.1.0"
description = "AI Dashboard Python backend adapters"
requires-python = ">=3.12"

[project.optional-dependencies]
vllm = ["vllm-mlx==0.3.0"]
mlx-lm = ["mlx-lm"]
vlm = ["mlx-vlm"]
whisper = ["mlx-whisper"]
audio = ["mlx-audio"]
imagegen = ["mflux"]
# "cpu" 이름은 레거시 — 실제로는 torch(MPS 자동 감지)+peft(LoRA)로 일반 safetensors 모델을 서빙한다.
cpu = ["llama-cpp-python", "transformers", "torch", "peft", "langgraph"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters"]