[package]
name = "aidash-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aidash"
path = "src/main.rs"

[dependencies]
aidash-core = { path = "../aidash-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }