[package]
name = "aidash-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
sysinfo = "0.33"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
base64 = "0.22"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
libproc = "0.14"
nix = { version = "0.29", features = ["signal", "process"] }
keyring = "3"
rpassword = "7"
urlencoding = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"