[package]
name = "aidash-frb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "aidash_frb"

[dependencies]
aidash-core = { path = "../aidash-core" }
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
once_cell = "1.20"
parking_lot = "0.12"

[build-dependencies]
flutter_rust_bridge_codegen = "=2.12.0"